--- a/newsletter/2023-11-05.md
+++ b/newsletter/2023-11-05.md
@@ -2,31 +2,31 @@
 ## #Web3Weekly: Oct. 29 to Nov. 4, 2023
 
 ![The Beatles landing at New York's JFK International Airport in 1964](https://upload.wikimedia.org/wikipedia/commons/6/61/The_Beatles_arrive_at_JFK_Airport.jpg)
-*Photo by United Press International via Wikimedia Commons*
+*The Beatles landing at New York's JFK International Airport in February 1964, their first trip to America. Photo by United Press International via Wikimedia Commons*
 
 **Gen Xers like me remember cassette tapes** as a rather crappy technology for listening to music, let alone *making* it. Cassettes would inevitably either wear out or get "eaten" -- which is to say hopelessly mangled -- in the guts of your Walkman.
 
-It makes [The Beatles' new song](https://www.youtube.com/watch?v=AW55J2zE3N4), released Thursday, all the more miraculous to learn it started life as a humble cassette recorded by the late John Lennon as a demo in the 1970s. However, as an excellent [making-of video](https://www.youtube.com/watch?v=APJAQoSCwuA) on the band's YouTube channel also explains, the song was ultimately finished with a big assist from a much newer technology: artificial intelligence.
+It makes [The Beatles' new song](https://www.youtube.com/watch?v=AW55J2zE3N4), released Thursday, all the more miraculous to learn it started life as a humble cassette recorded by the late John Lennon as a demo in the 1970s. However, as an excellent [making-of video](https://www.youtube.com/watch?v=APJAQoSCwuA) on the band's YouTube channel explains, the song was ultimately finished with a big assist from a much newer technology: artificial intelligence.
 
-Thus the new song, titled Now and Then, is also a useful contribution to the broader conversation we're all having right now about the potential impact and use cases for AI. In particular, I think two specific comparisons are important to discuss regarding the Beatles' use of AI.
+Thus the new song, titled Now and Then, is an important contribution to the broader conversation we are all having right now about the potential impact and use cases for AI. In particular, I think two specific comparisons are important to discuss regarding the Beatles' use of AI.
 
-The first is to compare Now and Then to two songs the Beatles released in 1995 using technology of that era to flesh out Lennon's parts well after his assassination in 1980. Those songs -- [Free as a Bird](https://www.youtube.com/watch?v=ODIvONHPqpk) and [Real Love](https://www.youtube.com/watch?v=ax7krBKzmVI) -- were on the same demo cassette as Now and Then, with all the sound-quality challenges such a recording entailed.
+The first is to compare Now and Then to two songs the Beatles released in 1995 using technology of that era to flesh out Lennon's parts well after his assassination in 1980. Those songs -- [Free as a Bird](https://www.youtube.com/watch?v=ODIvONHPqpk) and [Real Love](https://www.youtube.com/watch?v=ax7krBKzmVI) -- started on the same demo cassette as Now and Then.
 
-Paul McCartney, George Harrison, and Ringo Starr worked to complete all three songs in the studio, but ultimately decided not to release Now and Then because they couldn't get it to sound "right." In particular, McCartney says in the making-of video that Lennon's voice and his piano playing were too muddled together on the demo cassette.
+Paul McCartney, George Harrison, and Ringo Starr worked to complete all three songs in the studio, but ultimately decided not to release Now and Then with the other two because they couldn't get Now and THen to sound "right" at the time. In particular, McCartney says in the making-of video that Lennon's voice and his piano playing were too muddled together on the demo version of the song.
 
 AI ultimately helped them solve this problem, isolating and sharpening the vocal's sound quality, without the piano. The film director Peter Jackson suggested this solution to them because he had used AI to improve images and sound on Get Back, his sprawling 2021 documentary about the Beatles for Disney+. (That work is a technical marvel in its own right, by the way. It's based on archival footage from the late 1960s, but looks and sounds like it was shot much more recently.)
 
-The result of the Beatles using Jackson's AI to clean up Lennon's vocal on Now and Then is stark. Frankly, the song sounds way better -- and much less like a demo -- than the two 1995 singles. The comparison isn't even close.
+The result of the Beatles using Jackson's AI to clean up Lennon's vocal on Now and Then is stark. Frankly, the song sounds way better -- and much less like a demo -- than the two 1995 singles. The comparison isn't even close, which underscores how much more powerful AI is than the tech they used back in '95.
 
-Listen to all three for yourself [here](https://www.youtube.com/watch?v=ODIvONHPqpk), [here](https://www.youtube.com/watch?v=ax7krBKzmVI), and [here](https://www.youtube.com/watch?v=AW55J2zE3N4). Or, if you want to save some time, just skip near the seven-minute mark of the making-of video for Now and Then, where they [play back Lennon's AI-isolated vocal track](https://www.youtube.com/watch?v=APJAQoSCwuA&t=408s), clear as a bell.  
+Listen to all three songs for yourself [here](https://www.youtube.com/watch?v=ODIvONHPqpk), [here](https://www.youtube.com/watch?v=ax7krBKzmVI), and [here](https://www.youtube.com/watch?v=AW55J2zE3N4). Or, if you want to save some time, just skip near the seven-minute mark of the making-of video for Now and Then, where they [play back Lennon's AI-isolated vocal track](https://www.youtube.com/watch?v=APJAQoSCwuA&t=408s), clear as a bell.  
 
 As Ringo puts it: “Since Peter took John off and gave him his own track, it's like John's *there*. It's far out.”
 
-The second big comparison worth making is how Now and Then differs fro other AI-generated songs that have been in the news lately. In its coverage of the Beatles' release, Decrypt [observes](https://decrypt.co/204170/beatles-final-song-now-and-then-brought-to-life-by-ai):
+The second big comparison worth making is how Now and Then differs from other AI-generated songs that have been in the news lately. In its coverage of the Beatles' release, Decrypt [observes](https://decrypt.co/204170/beatles-final-song-now-and-then-brought-to-life-by-ai):
 
 *Up until recently, generative AI audio models were making headlines primarily due to unofficial “collaborations” and remixes, including the infamous ‘Heart on My Sleeve’ AI-generated song emulating artists Drake and The Weeknd, and a remix of The Weeknd’s ‘Starboy’ featuring an AI-generated Selena Gomez.*
 
-Now and Then isn't like those tracks at all because it's rooted in the Beatles' actual, flesh-and-blood performances. AI wasn't used to *replace* any of the Beatles. It just helped them do some specific tasks to make them much more effective at their jobs.
+Now and Then isn't like those tracks at all because it's rooted in the Beatles' actual, flesh-and-blood performances. AI wasn't used to *replace* any of the Beatles. It just helped them do some specific tasks to make them more effective at their jobs.
 
 Which is probably where AI is headed in a lot of other fields as well, I think. The sensational narrative of people being replaced outright gets a lot of press attention. But the real sweet spot is probably to use AI to enhance the human touch in the work we do, to wed the two together, sometimes beautifully so.
 
