--- a/newsletter/2023-11-05.md
+++ b/newsletter/2023-11-05.md
@@ -26,7 +26,7 @@ The second big comparison worth making is how Now and Then differs from other AI
 
 *Up until recently, generative AI audio models were making headlines primarily due to unofficial “collaborations” and remixes, including the infamous ‘Heart on My Sleeve’ AI-generated song emulating artists Drake and The Weeknd, and a remix of The Weeknd’s ‘Starboy’ featuring an AI-generated Selena Gomez.*
 
-Now and Then isn't like those tracks at all because it's rooted in the Beatles' actual, flesh-and-blood performances. AI wasn't used to *replace* any of the Beatles. It just helped them do some specific tasks to make them more effective at their jobs.
+Now and Then isn't like those tracks at all because it's rooted in the Beatles' actual, flesh-and-blood performances. AI wasn't used to *replace* any of the Beatles. It just helped them do some specific tasks to make them more effective at their jobs in the studio.
 
 Which is probably where AI is headed in a lot of other fields as well, I think. The sensational narrative of people being replaced outright gets a lot of press attention. But the real sweet spot is probably to use AI to enhance the human touch in the work we do, to wed the two together, sometimes beautifully so.
 
