--- a/newsletter/2023-11-05.md
+++ b/newsletter/2023-11-05.md
@@ -2,7 +2,7 @@
 ## #Web3Weekly: Oct. 29 to Nov. 4, 2023
 
 ![The Beatles landing at New York's JFK International Airport in 1964](https://upload.wikimedia.org/wikipedia/commons/6/61/The_Beatles_arrive_at_JFK_Airport.jpg)
-*The Beatles landing at New York's JFK International Airport in February 1964, their first trip to America. Photo by United Press International via Wikimedia Commons*
+*The Beatles landing at New York's JFK International Airport in February 1964. Photo by United Press International via Wikimedia Commons*
 
 **Gen Xers like me remember cassette tapes** as a rather crappy technology for listening to music, let alone *making* it. Cassettes would inevitably either wear out or get "eaten" -- which is to say hopelessly mangled -- in the guts of your Walkman.
 
@@ -12,13 +12,13 @@ Thus the new song, titled Now and Then, is an important contribution to the broa
 
 The first is to compare Now and Then to two songs the Beatles released in 1995 using technology of that era to flesh out Lennon's parts well after his assassination in 1980. Those songs -- [Free as a Bird](https://www.youtube.com/watch?v=ODIvONHPqpk) and [Real Love](https://www.youtube.com/watch?v=ax7krBKzmVI) -- started on the same demo cassette as Now and Then.
 
-Paul McCartney, George Harrison, and Ringo Starr worked to complete all three songs in the studio, but ultimately decided not to release Now and Then with the other two because they couldn't get Now and THen to sound "right" at the time. In particular, McCartney says in the making-of video that Lennon's voice and his piano playing were too muddled together on the demo version of the song.
+Paul McCartney, George Harrison, and Ringo Starr worked to complete all three songs in the studio, but ultimately decided not to release Now and Then with the other two because they couldn't get Now and Then to sound "right" at the time. In particular, McCartney says in the making-of video that Lennon's voice and his piano playing were too muddled together on the demo version.
 
-AI ultimately helped them solve this problem, isolating and sharpening the vocal's sound quality, without the piano. The film director Peter Jackson suggested this solution to them because he had used AI to improve images and sound on Get Back, his sprawling 2021 documentary about the Beatles for Disney+. (That work is a technical marvel in its own right, by the way. It's based on archival footage from the late 1960s, but looks and sounds like it was shot much more recently.)
+AI ultimately helped the band solve this problem, isolating and sharpening the Lennon vocal's sound quality, without the piano. The film director Peter Jackson suggested this solution to the Beatles because he had used AI to improve images and sound on Get Back, his sprawling 2021 documentary about the band for Disney+. (That work is a technical marvel in its own right, by the way. It's based on archival footage from 1969, but looks and sounds like it was shot much more recently.)
 
-The result of the Beatles using Jackson's AI to clean up Lennon's vocal on Now and Then is stark. Frankly, the song sounds way better -- and much less like a demo -- than the two 1995 singles. The comparison isn't even close, which underscores how much more powerful AI is than the tech they used back in '95.
+The result of the Beatles using Jackson's AI to clean up Lennon's vocal on Now and Then is stark. Frankly, the song sounds way better -- and much less like a demo -- than the two 1995 singles. The comparison isn't even close, which underscores how much of a leap forward AI is compared to the audio tech available back in 1995.
 
-Listen to all three songs for yourself [here](https://www.youtube.com/watch?v=ODIvONHPqpk), [here](https://www.youtube.com/watch?v=ax7krBKzmVI), and [here](https://www.youtube.com/watch?v=AW55J2zE3N4). Or, if you want to save some time, just skip near the seven-minute mark of the making-of video for Now and Then, where they [play back Lennon's AI-isolated vocal track](https://www.youtube.com/watch?v=APJAQoSCwuA&t=408s), clear as a bell.  
+Listen to all three songs for yourself [here](https://www.youtube.com/watch?v=ODIvONHPqpk), [here](https://www.youtube.com/watch?v=ax7krBKzmVI), and [here](https://www.youtube.com/watch?v=AW55J2zE3N4). Or, if you prefer, just skip near the seven-minute mark of the making-of video for Now and Then, where they [play back Lennon's AI-isolated vocal track](https://www.youtube.com/watch?v=APJAQoSCwuA&t=408s), clear as a bell.  
 
 As Ringo puts it: “Since Peter took John off and gave him his own track, it's like John's *there*. It's far out.”
 
