copyedits and cuts

--- a/newsletter/2023-11-05.md
+++ b/newsletter/2023-11-05.md
@@ -8,13 +8,13 @@
 
 It makes [The Beatles' new song](https://www.youtube.com/watch?v=AW55J2zE3N4), released Thursday, all the more miraculous to learn it started life as a humble cassette recorded by the late John Lennon as a demo in the 1970s. However, as an excellent [making-of video](https://www.youtube.com/watch?v=APJAQoSCwuA) on the band's YouTube channel explains, the song was ultimately finished with a big assist from a much newer technology: artificial intelligence.
 
-Thus the new song, titled Now and Then, is an important contribution to the broader conversation we are all having right now about the potential impact and use cases for AI. In particular, I think two specific comparisons are important to discuss regarding the Beatles' use of AI.
+Thus the new song, titled Now and Then, is an important contribution to the broader conversation we are all having right now about potential impact and use cases for AI. In particular, I think two comparisons are important to discuss regarding the Beatles' use of AI.
 
 The first is to compare Now and Then to two songs the Beatles released in 1995 using technology of that era to flesh out Lennon's parts well after his assassination in 1980. Those songs -- [Free as a Bird](https://www.youtube.com/watch?v=ODIvONHPqpk) and [Real Love](https://www.youtube.com/watch?v=ax7krBKzmVI) -- started on the same demo cassette as Now and Then.
 
-Paul McCartney, George Harrison, and Ringo Starr worked to complete all three songs in the studio, but ultimately decided not to release Now and Then with the other two because they couldn't get Now and Then to sound "right" at the time. In particular, McCartney says in the making-of video that Lennon's voice and his piano playing were too muddled together on the demo version.
+Paul McCartney, George Harrison, and Ringo Starr tried to complete all three songs in the studio, but ultimately decided not to release Now and Then with the other two in 1995 because they couldn't get Now and Then to sound "right" at the time. In particular, McCartney says in the making-of video that Lennon's voice and his piano playing were too muddled together on the demo version of the song.
 
-AI ultimately helped the band solve this problem, isolating and sharpening the Lennon vocal's sound quality, without the piano. The film director Peter Jackson suggested this solution to the Beatles because he had used AI to improve images and sound on Get Back, his sprawling 2021 documentary about the band for Disney+. (That work is a technical marvel in its own right, by the way. It's based on archival footage from 1969, but looks and sounds like it was shot much more recently.)
+More than two decades later, AI helped the band solve this problem, isolating and sharpening the quality of Lennon's vocal, without the piano. The film director Peter Jackson suggested this solution to the Beatles because he had used AI to improve images and sound on Get Back, his sprawling 2021 documentary about the band for Disney+. (That work is a technical marvel in its own right, by the way. It's based on archival footage from 1969, but looks and sounds like it was shot much more recently.)
 
 The result of the Beatles using Jackson's AI to clean up Lennon's vocal on Now and Then is stark. Frankly, the song sounds way better -- and much less like a demo -- than the two 1995 singles. The comparison isn't even close, which underscores how much of a leap forward AI is compared to the audio tech available back in 1995.
 
@@ -26,7 +26,7 @@ The second big comparison worth making is how Now and Then differs from other AI
 
 *Up until recently, generative AI audio models were making headlines primarily due to unofficial “collaborations” and remixes, including the infamous ‘Heart on My Sleeve’ AI-generated song emulating artists Drake and The Weeknd, and a remix of The Weeknd’s ‘Starboy’ featuring an AI-generated Selena Gomez.*
 
-Now and Then isn't like those tracks at all because it's rooted in the Beatles' actual, flesh-and-blood performances. AI wasn't used to *replace* any of the Beatles. It just helped them do some specific tasks to make them more effective at their jobs in the studio.
+Now and Then isn't like those tracks at all because it's rooted in the Beatles' actual, flesh-and-blood performances. AI wasn't used to *replace* any of the Beatles. It just helped them do specific tasks to make them more effective at their jobs in the studio.
 
 Which is probably where AI is headed in a lot of other fields as well, I think. The sensational narrative of people being replaced outright gets a lot of press attention. But the real sweet spot is probably to use AI to enhance the human touch in the work we do, to wed the two together, sometimes beautifully so.
 
