--- a/newsletter/2023-11-05.md
+++ b/newsletter/2023-11-05.md
@@ -10,13 +10,13 @@ It makes [The Beatles' new song](https://www.youtube.com/watch?v=AW55J2zE3N4), r
 
 Thus the new song, titled Now and Then, is an important contribution to the broader conversation we are all having right now about potential impact and use cases for AI. In particular, I think two comparisons are important to discuss regarding the Beatles' use of AI.
 
-The first is to compare Now and Then to two songs the Beatles released in 1995 using technology of that era to flesh out Lennon's parts well after his assassination in 1980. Those songs -- [Free as a Bird](https://www.youtube.com/watch?v=ODIvONHPqpk) and [Real Love](https://www.youtube.com/watch?v=ax7krBKzmVI) -- started on the same demo cassette as Now and Then.
+The first is to compare Now and Then to two songs the Beatles released in the late 1990s using technology of that era to flesh out Lennon's parts well after his assassination in 1980. Those songs -- [Free as a Bird](https://www.youtube.com/watch?v=ODIvONHPqpk) and [Real Love](https://www.youtube.com/watch?v=ax7krBKzmVI) -- started on the same demo cassette as Now and Then.
 
-Paul McCartney, George Harrison, and Ringo Starr tried to complete all three songs in the studio, but ultimately decided not to release Now and Then with the other two in 1995 because they couldn't get Now and Then to sound "right" at the time. In particular, McCartney says in the making-of video that Lennon's voice and his piano playing were too muddled together on the demo version of the song.
+Paul McCartney, George Harrison, and Ringo Starr tried to complete all three songs in the studio, but ultimately decided not to release Now and Then with the other two in the '90s because they couldn't get Now and Then to sound "right" at the time. In particular, McCartney says in the making-of video that Lennon's voice and his piano playing were too muddled together on the demo version of the song.
 
 More than two decades later, AI helped the band solve this problem, isolating and sharpening the quality of Lennon's vocal, without the piano. The film director Peter Jackson suggested this solution to the Beatles because he had used AI to improve images and sound on Get Back, his sprawling 2021 documentary about the band for Disney+. (That work is a technical marvel in its own right, by the way. It's based on archival footage from 1969, but looks and sounds like it was shot much more recently.)
 
-The result of the Beatles using Jackson's AI to clean up Lennon's vocal on Now and Then is stark. Frankly, the song sounds way better -- and much less like a demo -- than the two 1995 singles. The comparison isn't even close, which underscores how much of a leap forward AI is compared to the audio tech available back in 1995.
+The result of the Beatles using Jackson's AI to clean up Lennon's vocal on Now and Then is stark. Frankly, the song sounds way better -- and much less like a demo -- than the two '90s singles. The comparison isn't even close, which underscores how much of a leap forward AI is compared to the audio tech available back in the '90s.
 
 Listen to all three songs for yourself [here](https://www.youtube.com/watch?v=ODIvONHPqpk), [here](https://www.youtube.com/watch?v=ax7krBKzmVI), and [here](https://www.youtube.com/watch?v=AW55J2zE3N4). Or, if you prefer, just skip near the seven-minute mark of the making-of video for Now and Then, where they [play back Lennon's AI-isolated vocal track](https://www.youtube.com/watch?v=APJAQoSCwuA&t=408s), clear as a bell.  
 
