Adding Walkman link

--- a/newsletter/2023-11-05.md
+++ b/newsletter/2023-11-05.md
@@ -4,13 +4,13 @@
 ![The Beatles landing at New York's JFK International Airport in 1964](https://upload.wikimedia.org/wikipedia/commons/6/61/The_Beatles_arrive_at_JFK_Airport.jpg)
 *The Beatles landing at New York's JFK International Airport in February 1964. Photo by United Press International via Wikimedia Commons*
 
-**Gen Xers like me remember cassette tapes** as a rather crappy tool for listening to music, let alone making it. Cassettes would inevitably either wear out or get "eaten" -- which is to say hopelessly mangled -- in the guts of your Walkman.
+**Gen Xers like me remember cassette tapes** as a rather crappy tool for listening to music, let alone making it. Cassettes would inevitably either wear out or get "eaten" -- which is to say hopelessly mangled -- in the guts of your [Walkman](https://en.wikipedia.org/wiki/Walkman).
 
 It makes [The Beatles' new song](https://www.youtube.com/watch?v=AW55J2zE3N4), released Thursday, all the more miraculous to learn it started life as a humble cassette recorded by the late John Lennon as a demo in the 1970s. However, as an excellent [making-of video](https://www.youtube.com/watch?v=APJAQoSCwuA) on the band's official YouTube channel explains, the song was ultimately finished with a big assist from a much newer technology: artificial intelligence.
 
 Thus the new song, titled Now and Then, is an important contribution to the broader conversation we are all having right now about potential impact and use cases for AI. In particular, I think two comparisons are important to discuss regarding the Beatles' use of AI.
 
-The first is to compare Now and Then to two songs the Beatles released in the late 1990s using technology of that era to flesh out Lennon's parts. Those songs -- [Free as a Bird](https://www.youtube.com/watch?v=ODIvONHPqpk) and [Real Love](https://www.youtube.com/watch?v=ax7krBKzmVI) -- started on the same demo cassette as Now and Then.
+The first is to compare Now and Then to two songs the Beatles released in the late 1990s using technology of that era to flesh fout Lennon's parts. Those songs -- [Free as a Bird](https://www.youtube.com/watch?v=ODIvONHPqpk) and [Real Love](https://www.youtube.com/watch?v=ax7krBKzmVI) -- started on the same demo cassette as Now and Then.
 
 Paul McCartney, George Harrison, and Ringo Starr tried to complete all three songs in the studio in the '90s. But they ultimately decided not to release Now and Then with the other two because they couldn't get Now and Then to sound "right" at the time. In particular, McCartney says in the making-of video that Lennon's voice and his piano playing were too muddled together on the demo version of the song.
 
